--- a/MolexPlugin.UI/MolexPlugin.UI.csproj
+++ b/MolexPlugin.UI/MolexPlugin.UI.csproj
@@ -61,8 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnalyzeBodyAndFace.cs" />
-    <Compile Include="MoldeBase.cs" />
     <Compile Include="MoveObject.cs" />
+    <Compile Include="SuperBox.cs" />
+    <Compile Include="SuperBoxInternal.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
