--- a/MolexPlugin.UI/MolexPlugin.UI.csproj
+++ b/MolexPlugin.UI/MolexPlugin.UI.csproj
@@ -63,29 +63,53 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddEdmAsm.cs" />
-    <Compile Include="EleStandardSeatFormInternal.cs">
+    <Compile Include="Electrode\AddEdmAsm.cs" />
+    <Compile Include="Electrode\DeleteEle.cs" />
+    <Compile Include="Electrode\ElectrodeColor.cs" />
+    <Compile Include="Electrode\ElectrodeDrawingCreateForm.cs" />
+    <Compile Include="Electrode\ElectrodeDrawingForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddWorkInternal.cs" />
-    <Compile Include="AddWork.cs" />
-    <Compile Include="AddWorkpiece.cs" />
-    <Compile Include="AnalyzeBodyAndFace.cs" />
-    <Compile Include="CheckElectrode.cs" />
-    <Compile Include="CreateEleStandardSeatForm.cs" />
-    <Compile Include="EleStandardSeatForm.cs">
+    <Compile Include="Electrode\ElectrodeDrawingForm.Designer.cs">
+      <DependentUpon>ElectrodeDrawingForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Electrode\ElectrodeERForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EleStandardSeatForm.Designer.cs">
+    <Compile Include="Electrode\ElectrodeERForm.Designer.cs">
+      <DependentUpon>ElectrodeERForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Electrode\EleStandardSeatFormInternal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Electrode\AddWorkInternal.cs" />
+    <Compile Include="Electrode\AddWork.cs" />
+    <Compile Include="Electrode\AddWorkpiece.cs" />
+    <Compile Include="Tool\AnalyzeBodyAndFace.cs" />
+    <Compile Include="Electrode\CheckElectrode.cs" />
+    <Compile Include="Electrode\CreateEleStandardSeatForm.cs" />
+    <Compile Include="Electrode\EleStandardSeatForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Electrode\EleStandardSeatForm.Designer.cs">
       <DependentUpon>EleStandardSeatForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MoveBody.cs" />
-    <Compile Include="MoveObject.cs" />
-    <Compile Include="SuperBox.cs" />
-    <Compile Include="AddEdmAsmInternal.cs" />
-    <Compile Include="SuperBoxInternal.cs" />
+    <Compile Include="Electrode\Interference.cs" />
+    <Compile Include="Electrode\MoveBody.cs" />
+    <Compile Include="Tool\MoveObject.cs" />
+    <Compile Include="Electrode\PositionEle.cs" />
+    <Compile Include="Tool\SuperBox.cs" />
+    <Compile Include="Electrode\AddEdmAsmInternal.cs" />
+    <Compile Include="Tool\SuperBoxInternal.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Electrode\WorkpieceDrawingCreateForm.cs" />
+    <Compile Include="Electrode\WorkpieceDrawingForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Electrode\WorkpieceDrawingForm.Designer.cs">
+      <DependentUpon>WorkpieceDrawingForm.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Basic\Basic.csproj">
@@ -102,10 +126,20 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="EleStandardSeatForm.resx">
+    <EmbeddedResource Include="Electrode\ElectrodeDrawingForm.resx">
+      <DependentUpon>ElectrodeDrawingForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Electrode\ElectrodeERForm.resx">
+      <DependentUpon>ElectrodeERForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Electrode\EleStandardSeatForm.resx">
       <DependentUpon>EleStandardSeatForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Electrode\WorkpieceDrawingForm.resx">
+      <DependentUpon>WorkpieceDrawingForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
