--- a/MolexPlugin.UI/MolexPlugin.UI.csproj
+++ b/MolexPlugin.UI/MolexPlugin.UI.csproj
@@ -63,11 +63,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BomCreateForm.cs" />
-    <Compile Include="BomForm.cs">
+    <Compile Include="Electrode\BomCreateForm.cs" />
+    <Compile Include="Electrode\BomForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BomForm.Designer.cs">
+    <Compile Include="Electrode\BomForm.Designer.cs">
       <DependentUpon>BomForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Electrode\AddEdmAsm.cs" />
@@ -92,7 +92,7 @@
     <Compile Include="Electrode\AddWorkInternal.cs" />
     <Compile Include="Electrode\AddWork.cs" />
     <Compile Include="Electrode\AddWorkpiece.cs" />
-    <Compile Include="BomFormInternal.cs">
+    <Compile Include="Electrode\BomFormInternal.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Tool\AnalyzeBodyAndFace.cs" />
@@ -136,7 +136,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="BomForm.resx">
+    <EmbeddedResource Include="Electrode\BomForm.resx">
       <DependentUpon>BomForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Electrode\ElectrodeDrawingForm.resx">
