--- a/MolexPlugin1899/App.config
+++ b/MolexPlugin1899/App.config
@@ -1,9 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="ConnectionName" value="Access"/>
+    <add key="ConnectionName" value="Access" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <appSettings>
-    <add key="Database" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source =C:\Users\ycchen10\OneDrive - kochind.com\Desktop\MolexPlugIn-1899\Cofigure\MolexPlup-2020.1.7.accdb;Persist Security Info=True;Jet OLEDB:Database Password = chyuch@0802; UserId = admin"/>
+    <add key="Database" value="Provider=Microsoft.ACE.OLEDB.12.0;Data Source =C:\Users\ycchen10\OneDrive - kochind.com\Desktop\MolexPlugIn-1899\Cofigure\MolexPlup-2020.1.7.accdb;Persist Security Info=True;Jet OLEDB:Database Password = chyuch@0802; UserId = admin" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
