--- a/MolexPlugin.DAL/MolexPlugin.DAL.csproj
+++ b/MolexPlugin.DAL/MolexPlugin.DAL.csproj
@@ -30,19 +30,39 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NXOpen">
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>..\..\Managed\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI">
+      <HintPath>..\..\Managed\NPOI.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OOXML">
+      <HintPath>..\..\Managed\NPOI.OOXML.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXml4Net">
+      <HintPath>..\..\Managed\NPOI.OpenXml4Net.dll</HintPath>
+    </Reference>
+    <Reference Include="NPOI.OpenXmlFormats">
+      <HintPath>..\..\Managed\NPOI.OpenXmlFormats.dll</HintPath>
+    </Reference>
+    <Reference Include="NXOpen, Version=1903.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Managed\NXOpen.dll</HintPath>
     </Reference>
-    <Reference Include="NXOpen.Guide">
+    <Reference Include="NXOpen.Guide, Version=1903.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Managed\NXOpen.Guide.dll</HintPath>
     </Reference>
-    <Reference Include="NXOpen.UF">
+    <Reference Include="NXOpen.UF, Version=1899.1700.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Managed\NXOpen.UF.dll</HintPath>
     </Reference>
-    <Reference Include="NXOpen.Utilities">
+    <Reference Include="NXOpen.Utilities, Version=1903.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Managed\NXOpen.Utilities.dll</HintPath>
     </Reference>
-    <Reference Include="NXOpenUI">
+    <Reference Include="NXOpenUI, Version=1903.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\Managed\NXOpenUI.dll</HintPath>
     </Reference>
     <Reference Include="System" />
@@ -77,7 +97,9 @@
     <Compile Include="CAM\Operation\FlowCutCreateOperation.cs" />
     <Compile Include="CAM\Operation\FaceMillingCreateOperation.cs" />
     <Compile Include="CAM\Operation\BaseStationCreateOperation.cs" />
-    <Compile Include="CreateElectrodeCAMBuilder.cs" />
+    <Compile Include="CAM\CreateElectrodeCAMBuilder.cs" />
+    <Compile Include="CAM\CreateProgramBuilder.cs" />
+    <Compile Include="CreatePostExcelBuilder.cs" />
     <Compile Include="ElectrodeBuilder\DeleteElectrodeBuilder.cs" />
     <Compile Include="ElectrodeBuilder\CreateElectrode.cs" />
     <Compile Include="ElectrodeBuilder\AbstractCreateAssmbile.cs" />
@@ -128,8 +150,8 @@
     <Compile Include="CAM\ElectrodeCAMNameTemplate.cs" />
     <Compile Include="CAM\ElectrodeOperationTemplate.cs" />
     <Compile Include="CAM\ElectrodeCAMFactory.cs" />
-    <Compile Include="ElectrodeCAMFile.cs" />
-    <Compile Include="ElectrodeCAMTreeInfo.cs" />
+    <Compile Include="CAM\ElectrodeCAMFile.cs" />
+    <Compile Include="CAM\ElectrodeCAMTreeInfo.cs" />
     <Compile Include="Hole\StepBuilder.cs" />
     <Compile Include="Hole\HoleBuilder.cs" />
     <Compile Include="Hole\StepBlindHoleFeature.cs" />
@@ -154,7 +176,9 @@
     <Compile Include="CAM\ProgramOperationName.cs" />
     <Compile Include="CAM\Template\PlanarAndSufaceEleTemplate.cs" />
     <Compile Include="CAM\Template\SimplenessVerticalEleTemplate.cs" />
-    <Compile Include="OperationTreeListViewInfo.cs" />
+    <Compile Include="CAM\OperationTreeListViewInfo.cs" />
+    <Compile Include="PartPostBuilder.cs" />
+    <Compile Include="PartPostExcelInfo.cs" />
     <Compile Include="SlopeAndDia\AnalysisBodySlopeAndMinDia.cs" />
     <Compile Include="SlopeAndDia\FaceSlopeColourBuilder.cs" />
     <Compile Include="SlopeAndDia\BackOffFaceSlopeColour.cs" />
